; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_refs_reflog_exists.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_refs_reflog_exists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_store = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @refs_reflog_exists(%struct.ref_store* %0, i8* %1) #0 {
  %3 = alloca %struct.ref_store*, align 8
  %4 = alloca i8*, align 8
  store %struct.ref_store* %0, %struct.ref_store** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.ref_store*, %struct.ref_store** %3, align 8
  %6 = getelementptr inbounds %struct.ref_store, %struct.ref_store* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = bitcast {}** %8 to i32 (%struct.ref_store*, i8*)**
  %10 = load i32 (%struct.ref_store*, i8*)*, i32 (%struct.ref_store*, i8*)** %9, align 8
  %11 = load %struct.ref_store*, %struct.ref_store** %3, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 %10(%struct.ref_store* %11, i8* %12)
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
